# uav-tracker-state-classifier

./: .env.example  .envrc.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .venv  AGENTS.md  ANALYSIS.md  ARCHITECT.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CURRENT_PHASE.md  FROZEN.md  HANDOFF.md  HANDOFF_NEXT.md  LICENSE  Makefile  NIGHT_SUMMARY_0521.md  PLAN.md  PROJECT_X.md  README.md  README_UK.md  RUNNING.md  SESSION_SUMMARY.md  SESSION_SUMMARY_UK.md  SUPER_PLAN.md  THOUGHTS.md  bugs.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker-images.yml  nightly-eval.yml  plugin-contract.yml  release.yml  smoke-eval.yml
agents/: architect.md  devops.md  engineer.md  ml_architect.md  ml_cv_engineer.md
configs/archive/: salt_ce_ablation.yaml  salt_ctem.yaml  v2_full_ml.yaml
configs/csc/: csc_gru.yaml  csc_mlp.yaml  csc_tcn16.yaml  csc_tcn16_r25_fcw3_stage1.yaml  csc_tcn16_r25_fcw3_stage2.yaml  csc_tcn16_r3_w32_stage1.yaml  csc_tcn16_r3_w32_stage2.yaml  csc_tcn16_r4_v3feat_stage1.yaml  csc_tcn16_r4_v3feat_stage2.yaml  csc_tcn16_run1_hardneg_stage1.yaml  csc_tcn16_run1_hardneg_stage2.yaml  csc_tcn16_run2_scalectx_stage1.yaml  csc_tcn16_run2_scalectx_stage2.yaml  csc_tcn16_train2.yaml  csc_tcn16_train2_v3.yaml  csc_tcn16_train2_v3_stage2.yaml  csc_tcn16_train2_v3_stage2_f16.yaml  csc_tcn16_v3.yaml  csc_tcn16_v3fix_r15_stage1.yaml  csc_tcn16_v3fix_stage1.yaml  csc_tcn16_v3fix_stage2.yaml  csc_tcn32.yaml  csc_tcn32_r3_lostfocal_stage2.yaml  csc_tcn32_train2_v3_f16_stage1.yaml  csc_tcn32_train2_v3_f16_stage2.yaml  csc_tcn32_v2_fcw3_w32_stage1.yaml  csc_tcn32_v2_fcw3_w32_stage2.yaml  csc_tcn32_v2_fcw4_w32_stage1.yaml  csc_tcn32_v2_fcw4_w32_stage2.yaml  csc_tcn32_v3.yaml  csc_tcn32_v3fix_stage1.yaml  csc_tcn32_v3fix_stage2.yaml  labeling.yaml  sentinels.yaml
configs/datasets/: otb100.yaml  uav123.yaml
configs/detectors/: yolov8n.yaml
configs/experiments/: ablation_detection.yaml  ablation_schedulers.yaml  ablation_signals.yaml  edge_jetson.yaml  hybrid_apce.yaml  hybrid_confidence.yaml  hybrid_with_detection.yaml  improved_hybrid.yaml  paper_entropy_hybrid.yaml  paper_fixed_periodic.yaml  paper_kcf.yaml  paper_mobiletrack.yaml  paper_siamfc.yaml  paper_table2.yaml  v2_full_ml.yaml
configs/prod/: ortrack_baseline.yaml  ostrack_baseline.yaml  salt.yaml  salt_detector_rtdetr.yaml  salt_ostrack.yaml  saltrd_dtb70.yaml  saltrd_uav123.yaml  saltrd_visdrone_sot.yaml
configs/schedulers/: adaptive_threshold.yaml  cusum.yaml  hysteresis_binary.yaml  trajectory_aware.yaml
configs/signals/: apce.yaml  circular_resultant.yaml  flow_divergence.yaml  motion_entropy.yaml  tracker_confidence.yaml
configs/trackers/: kcf_henriques.yaml  kcf_kalman.yaml  mobiletrack.yaml  ostrack_256.yaml  siamfc.yaml
csc_lib/: __init__.py
csc_lib/csc/: __init__.py  adapters.py  calibration.py  config.py  dataset.py  fc_challenge.py  features.py  inference.py  model.py
csc_lib/eval/: __init__.py  calibration.py  classification.py  feature_quality.py  state.py
saltr/: README_PROD.md  data  pyproject.toml  run_phase1.sh  run_phase6.sh
saltr/scripts/: architect_review.py  split_oracle_per_dataset.py
saltr/src/salt_r/: action_audit.py  actions.py  advisor.py  baselines.py  build_candidate_dataset.py  calibrate_policy.py  candidate_events.py  candidate_mining_pilot.py  center_freeze_sweep.py  collect_features.py  controller.py  diagnose_candidate_features.py  diagnose_labels.py  dino_identity_pilot.py  eprocess.py  eval.py  evidence.py  feature_schema.py  integrate.py  interventions.py  make_oof_predictions.py  make_safe_to_update_labels.py  memory.py  memory_features.py  model.py  oracle_action_audit.py  oracle_actions.py  point_sidecar_extractor.py  point_teacher_pilot.py  policy.py  policy_model.py  policy_sweep.py  rollout_policy.py  scene_state.py  sgla_memory_extractor.py  shadow_mode.py  train.py  train_candidate_scorer.py  train_policy.py
saltr/src/salt_r/teachers/: cotracker3_export.py  point_features.py
src/csc_uav_tracking/: __init__.py  paths.py
src/uav_tracker/: __init__.py  cli.py  registry.py  runner.py  salt_runner.py  types.py
tests/: conftest.py  test_csc_diagnosis_quality_gates.py  test_csc_runtime_perf.py  test_csc_v3_forecast.py  test_csctcn_causality.py  test_fc_challenge.py  test_fc_recover.py  test_no_runtime_iou.py  test_paper_metrics.py  test_sglatrack_memory.py  test_window_causality.py
tests/archive/: test_scene_classifier.py
tests/contract/: test_plugin_contract.py
tests/eval/: test_calibration.py  test_classification.py  (+2 more)
tools/: _compare_diag_gt.py  _control_ab_easy_hard.py  _demo_forecast_lead.py  _demo_forecast_timeline.py  _proof_v2_dispatch.py  _smoke_audit_labels.py  _smoke_audit_viz.py  _smoke_avtrack.py  _smoke_csc_cli.py  _smoke_diagnose_csc_features.py  _smoke_evptrack.py  _smoke_ortrack.py  _smoke_ostrack.py  _smoke_profile_pipeline.py  _smoke_risk_gate.py  _smoke_run_baseline.py  _smoke_run_with_csc.py  _smoke_stage1_gate.py  _verify_no_stubs.py  agg_4way.py  agg_clamp.py  agg_clamp_matrix.py  agg_full.py  auc_by_state.py  audit_fc_precision.py  audit_label_distribution.py  audit_uavtrack112.sh  audit_visualizer.py  auto_full_pipeline.sh  auto_pipeline_v2plus.py  auto_test_v2plus.py  build_fc_n10_summary.py  build_results_doc.py  build_scene_state_labels.py  check_per_sequence_breakdown.py  check_stage1_gate.py  check_v2_features.py  collapse_cu_3state.py  compare_control_modes.py  compare_csc_models.py  (+129 more)
(+223 files in other folders)
