[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salt-r"
version = "0.1.0"
description = "SALT-RD: Proactive Tracking-Risk Dynamicity for UAV SOT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/salt_r"]
